# nano-math

./: .gitignore  .gitmodules  CLAUDE.md  SPEC.md  eval_sft-dartmath-50k.json  eval_sft-dartmath-50k_v2.json  experiment_registry.jsonl  hypothesis.md  launch.py  next_steps.md  pyproject.toml
configs/experiments/: pt-s-broad.yaml
docs/: modal_reference.md
harness/: __init__.py  bookkeeper.py  config.py  experiment_state.py  gates.py  metrics.py  runner.py  search.py
logs/: eval_d2_mathsft.json  eval_d2_pretrain.json  eval_d2_sft.json
logs/dataset_research/: acemath.json  dartmath.json  gsm8k.json  math.json  mathinstruct.json  metamath.json  mixture_of_thoughts.json  mixture_of_thoughts_0-7k.json  mixture_of_thoughts_14k-inf.json  mixture_of_thoughts_7k-14k.json  numinamath.json  numinamath15.json  openmathinstruct2.json  openthoughts3.json  stratos.json
math_nano/data/: answers.py  dataloader.py  hf.py  io.py  tokenizer.py
modal_jobs/: __init__.py  common.py  data_prep.py  eval.py  grpo.py  pretrain.py  sft.py  train.py
scripts/: gpu_config.py  math_sft.py  modal_status.sh  registry.py  status.sh
scripts/data/: analyze_dataset.py  download_and_tokenize.py  download_eval.py  download_sample.py  normalize_dataset.py  (+4 more)
specs/: 01_models.md  02_pretrain_data.md  03_pretrain_experiments.md  04_sft_data.md  05_sft_experiments.md  06_post_training.md  07_eval_harness.md  08_infrastructure.md  09_inference.md  10_results_framework.md  11_guardrails.md  12_agent_pipeline.md  13_stage_validation.md  14_local_dev.md  15_bookkeeping.md  16_visualization.md  17_search_strategy.md  18_harness.md  19_tests.md
tests/: conftest.py
(+30 files in other folders)
