[project]
name = "math-nano"
version = "0.1.0"
description = "Scaling laws for math reasoning in small models"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.4.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "tiktoken>=0.6.0",
    "huggingface-hub>=0.22.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
all = [
    "trl>=0.8.0",
    "wandb>=0.16.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
]

[tool.uv]
dev-dependencies = ["pytest", "ruff"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (smoke tests, training runs)",
]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
